desarollada fuciones toolbat con nombre usuario y Fragmentos

--- a/Proyecto final DAM/chatApp/app/src/main/res/layout/activity_registrar.xml
+++ b/Proyecto final DAM/chatApp/app/src/main/res/layout/activity_registrar.xml
@@ -62,7 +62,7 @@
                 android:drawablePadding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:hint="Password"
                 android:id="@+id/rg_passowrd"
                 android:layout_margin="20dp"
@@ -82,7 +82,7 @@
                 android:drawablePadding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:hint="Confirme passoword"
                 android:id="@+id/rg_password2"
                 android:layout_margin="20dp"
