--- a/Proyecto final DAM/chatApp/app/src/main/res/layout/activity_login.xml
+++ b/Proyecto final DAM/chatApp/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                 android:drawablePadding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:hint="Password"
                 android:id="@+id/lg_passowrd"
                 android:layout_margin="20dp"
