--- a/Proyecto final DAM/chatApp/app/src/main/res/layout/fragment_fragmento_usuarios.xml
+++ b/Proyecto final DAM/chatApp/app/src/main/res/layout/fragment_fragmento_usuarios.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragmentos.FragmentoUsuarios">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/til_buscar">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Buscar usuario"
+            android:id="@+id/et_buscar_usuario"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_below="@+id/til_buscar"
+        android:layout_marginTop="10dp"
+        android:id="@+id/rv_usuarios"
+        tools:listitem="@layout/item_usuario"/>
 
-</FrameLayout>
+
+</RelativeLayout>
