--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -1,14 +1,15 @@
 extends ../layout/admin
 
 block contenido 
-    div(class="py-10") 
-        
+    div(class="py-10")         
         if proyectos.length
             h1(class="text-white text-5xl font-extrabold italic text-center mt-4 mb-14")= "Mis proyectos"
-            form(action="/mis-proyectos", method="get")
-                input(type="text", name="busqueda", placeholder="Buscar proyecto")
-                button(type="submit") Buscar
-            div(class="flex flex-wrap justify-start")
+            div(class="gap-2 flex justify-center items-center mb-6")
+                form(action="/mis-proyectos" method="post")
+                    input(type="hidden", name="_csrf", value=csrfToken) 
+                    div(class="form-control")
+                        input(type="text" name="busqueda"  placeholder="Buscar proyecto" class="input input-bordered w-24 md:w-auto")
+            div(class="flex flex-wrap justify-center gap-4")
                 each proyecto in proyectos
                     div(class="card w-64 bg-base-100 shadow-xl hover:cursor-pointer hover:scale-105 hover:shadow-2xl m-4 transition-all duration-500 ease-in-out")  
                         figure 
@@ -27,22 +28,34 @@ block contenido
                                         input(type="hidden", name="_csrf", value=csrfToken) 
                                         button(class="btn w-20 bg-red-500 text-white") Eliminar
 
-            div(class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6")
-                    div(class="sm:flex-1 sm:flex sm:items-center sm:justify-between")
-                        p(class="text-sm text-gray-700 gap-2") Mostrando&nbsp;
+            div(class="bg-zinc-900 px-4 py-3 flex items-center justify-between border-b border-gray-200 sm:px-6")
+                    div(class="sm:flex-1 sm:flex sm:items-center sm:justify-between text-white")
+                        p(class="text-sm  gap-2") Mostrando&nbsp;
                             span(class="font-medium") #{offset + 1}&nbsp;a&nbsp;
                             span(class="font-medium") #{total < limite + offset ? total : limite + offset}&nbsp;de&nbsp;
                             span(class="font-medium") #{total}&nbsp;resultados
                     div 
-                        nav(class="relative z-0 inline-flex rounded-md shadow-md")
+                        nav(class="relative z-0 inline-flex rounded-lg shadow-md")
                             - var n = 1;
                                 while n <= paginas
-                                    a(href=`/mis-proyectos?pagina=${n}`, class=`${paginaActual == n ? 'bg-indigo-50 border-indigo-500 text-indigo-600' : 
-                                    `bg-white border-gray-300 text-gray-500 hover:bg-gray-50 `} relative inline-flex items-center px-4 py-2 border text-sm
+                                    a(href=`/mis-proyectos?pagina=${n}`, class=`${paginaActual == n ? 'bg-zinc-900 text-white border border- my-2' : 
+                                    'bg-zinc-700 border-indigo-50 text-white'} relative inline-flex items-center px-4 py-2 text-sm
                                     font-medium`) #{n++}
   
                 
         else
             h1(class="text-white text-5xl font-extrabold italic text-center mt-4 mb-14")= estado
 
+        
+        footer(class="flex flex-row justify-center items-center bg-zinc-900 p-3 text-white text-start font-bold italic text-sm mt-4")      
+            p(xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/")
+                a(property="dct:title" rel="cc:attributionURL" href="https://github.com/Conradotss/DAM2/tree/main/Proyecto%20final%20DAM/Gestion%20Archivos") Gestion Archivos&nbsp;
+                | by 
+                a(rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/Conradotss") Roy Denys Calderón Manrique 
+                | is licensed under 
+                a(href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" class="flex flex-row mb-8")
+                    | Creative Commons Attribution-ShareAlike 4.0 International
+                    img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="")
+                    img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="")
+                    img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="")
         //-pre #{JSON.stringify(proyectos, null, 2)}
