--- a/Proyecto final DAM/Gestion Archivos/views/layout/includes/header-admin.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/layout/includes/header-admin.pug
@@ -1,8 +1,23 @@
 header(class="bg-transparent p-3")
     div(class="container mx-auto flex justify-between items-center bg")
-        a(href="/mis-proyectos" class="cursor-pointer") 
-            h1(class="bg-clip-text text-transparent text-2xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
-                span(class="text-xl font-extrabold text-white") Archivos    
+        div(class="flex flex-row ")
+            div(class="dropdown mx-7")
+                div(tabindex="0" role="button" class="btn btn-ghost btn-circle")
+                    label.btn.btn-circle.swap.swap-rotate
+                        input(type="checkbox")
+                        svg(xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512")
+                            path(d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z")
+
+                ul(tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-zinc-900 rounded-box w-52")
+                    div(class="join join-vertical")
+                        button(class="btn join-item hover:bg-base-200") 
+                            a(href="#") Mi Perfil
+                        button(class="btn join-item hover:bg-base-200")
+                            a(href="/acerca-de") Acerca de
+
+            a(href="/mis-proyectos" class="cursor-pointer mt-2") 
+                h1(class="bg-clip-text text-transparent text-2xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
+                    span(class="text-xl font-extrabold text-white") Archivos    
 
         nav(class="text-white font-bold italic text-lg flex items-center")
             a(href="/nuevo-proyecto" class="px-10 mr-4") 
