--- a/Proyecto final DAM/Gestion Archivos/views/gestion/nuevo-proyecto.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/nuevo-proyecto.pug
@@ -13,7 +13,7 @@ block contenido
                             path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z")
                         span=error.msg
 
-        div(class="mt-8 mx-auto max-w-md drop-shadow-[0_1px_25px_rgba(251,251,251,1)] hover:drop-shadow-[0_1px_30px_rgba(251,251,251,1)]")
+        div(class="mt-8 mx-3 lg:mx-auto lg:max-w-md md:mx-auto md:max-w-md sm:mx-auto sm:max-w-md drop-shadow-[0_1px_25px_rgba(251,251,251,1)] hover:drop-shadow-[0_1px_30px_rgba(251,251,251,1)]")
             div(class="bg-white py-8 px-4 rounded-lg")
                 form(action=`/nuevo-proyecto` method="POST" noValidate class="p-3")
                     input(type="hidden" name="_csrf" value=csrfToken)
