--- a/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
@@ -3,15 +3,15 @@ extends ../layout/index
 block contenido
     div(class="py-10")
         a(href="/mis-proyectos" class="cursor-pointer mb-16") 
-            h1(class="bg-clip-text text-transparent text-8xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
-                span(class="text-6xl font-extrabold text-white") Archivo
+            h1(class="bg-clip-text text-transparent text-6xl lg:text-9xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
+                span(class="text-4xl lg:text-7xl font-extrabold text-white") Archivo
 
-        h2(class="text-4xl font-extrabold text-white text-start italic mb-7 mt-16") ¿Como funciona Gestión Archivo?
+        h2(class="text-4xl font-extrabold text-white text-start italic mb-7 mt-16") ¿Cómo funciona Gestión Archivo?
         ul(class="")
             li 
                 p(class="text-base font-bold text-white text-start italic my-5 ml-5") * Gestión Archivo te permite almacenar tus archivos de manera sencilla y segura.
             li 
-                p(class="text-base font-bold text-white text-start  my-5 ml-5")  * Es conveniente que no subas archivos muy pesados, ya que el espacio de almacenamiento es limitado, el límite para cada archivo es de 150mb y hasta un máximo de 10 archivos por proyecto.
+                p(class="text-base font-bold text-white text-start  my-5 ml-5")  * El espacio de almacenamiento es limitado, el límite para cada archivo es de 150mb y hasta un máximo de 10 archivos por proyecto.
             li 
                 p(class="text-base font-bold text-white text-start  my-5 ml-5")  * Gestión Archivo soporta la subida de multiples archivos a la vez, solo selecciona los archivos que deseas subir y listo.
             li 
