--- a/Proyecto final DAM/Gestion Archivos/views/auth/login.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/auth/login.pug
@@ -3,8 +3,8 @@ extends ../layout/index
 block contenido 
     div(class="py-10")
             a(href="/auth/login" class="cursor-pointer") 
-                h1(class="bg-clip-text text-transparent text-6xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
-                    span(class="text-4xl font-extrabold text-white") Archivos
+                h1(class="bg-clip-text text-transparent lg:text-6xl md:text-6xl sm:text-6xl text-4xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
+                    span(class=" lg:text-2xl md:text-2xl sm:text-2xl text-2xl font-extrabold text-white") Archivos
             
             h2(class="text-white text-2xl font-extrabold text-center mt-4 mb-14")= pagina
 
@@ -16,7 +16,7 @@ block contenido
                                 path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z")
                             span=error.msg
 
-            div(class="mt-8 mx-auto max-w-md drop-shadow-[0_1px_55px_rgba(17,154,168,1)] hover:drop-shadow-[0_1px_60px_rgba(17,154,168,1)]")
+            div(class="mt-8 mx-3 lg:mx-auto lg:max-w-md md:mx-auto md:max-w-md sm:mx-auto sm:max-w-md drop-shadow-[0_1px_55px_rgba(17,154,168,1)] hover:drop-shadow-[0_1px_60px_rgba(17,154,168,1)]")
                 div(class="bg-white py-8 px-4")
                     form(action="/auth/login" method="POST" noValidate)
                         input(type="hidden" name="_csrf" value = csrfToken)
