--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -7,8 +7,8 @@ block contenido
             div(class="gap-2 flex justify-center items-center mb-6")
                 form(action="/mis-proyectos" method="post")
                     input(type="hidden", name="_csrf", value=csrfToken) 
-                    div(class="form-control")
-                        input(type="text" name="busqueda"  placeholder="Buscar proyecto" class="input input-bordered w-24 md:w-auto")
+                    div(class="form-control w-full md:w-auto")
+                        input(type="text" name="busqueda"  placeholder="Buscar" class="input input-bordered w-24 md:w-auto")
             div(class="flex flex-wrap justify-center gap-4")
                 each proyecto in proyectos
                     div(class="card w-64 bg-base-100 shadow-xl hover:cursor-pointer hover:scale-105 hover:shadow-2xl m-4 transition-all duration-500 ease-in-out")  
