--- a/Proyecto final DAM/Gestion Archivos/views/gestion/mostrar.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/mostrar.pug
@@ -6,7 +6,7 @@ block contenido
     div(class="py-10") 
         //-Linea para imprimir datos en la pagina web -->pre=JSON.stringify(proyecto, undefined, 2)
 
-        div(class="card bg-base-100 shadow-xl w-full m-3 p-6 rounded-lg")
+        div(class="bg-transparent text-white mx-3 lg:w-full md:mx-auto md:max-w-md sm:mx-auto sm:max-w-md rounded-lg")
             div(class="card-body")
                 h2(class="text-center font-bold text-4xl mb-6 underline") Proyecto: #{proyecto.titulo}
                 p(class="font-bold text-2xl text-start mb-2") Descripcion: 
@@ -19,7 +19,11 @@ block contenido
             div(class="mt-6")
                 h2(class="text-center font-bold text-4xl mb-6 underline") Archivos
                 each archivo in proyecto.archivos
-                    a(href=archivo.ruta_almacenamiento, download, class="bg-blue-500 m-6 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-2 inline-block") Descargar #{archivo.nombre}
+                    a(href=archivo.ruta_almacenamiento, download class="flex flex-col justify-center items-center") 
+                        button(class="button")
+                            span(class="button_lg")
+                                span(class="button_sl")
+                                span(class="button_text") Descargar #{archivo.nombre}
             
                 
             
