--- a/Proyecto final DAM/Gestion Archivos/views/inicio/inicio.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/inicio/inicio.pug
@@ -1,10 +1,10 @@
 extends ../layout/inicio
 
 block contenido
-    div(class="py-10")
+    div(class="py-44")
         a(href="/" class="cursor-pointer") 
-            h1(class="bg-clip-text text-transparent text-6xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
-                span(class="text-4xl font-extrabold text-white") Archivos
+            h1(class="bg-clip-text text-transparent lg:text-[140px] md:text-7xl text-6xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic") Gestión
+                span(class="lg:text-[80px] md:text-6xl text-3xl font-extrabold text-white") Archivos
 
         div(class="flex flex-row justify-around mt-[200px]")
             a(href="/auth/login") 
