--- a/Proyecto final DAM/Gestion Archivos/views/layout/includes/header-admin.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/layout/includes/header-admin.pug
@@ -13,14 +13,14 @@ header(class="bg-transparent p-3")
                         button(class="btn join-item hover:bg-base-200")
                             a(href="/acerca-de") Acerca de
 
-            a(href="/mis-proyectos" class="cursor-pointer mt-2") 
+            a(href="/mis-proyectos" class="cursor-pointer mt-2 hidden lg:block md:block sm:block") 
                 h1(class="bg-clip-text text-transparent text-2xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic ") Gestión
                     span(class="text-xl font-extrabold text-white") Archivos    
 
-        nav(class="text-white font-bold italic text-lg flex items-center")
-            a(href="/nuevo-proyecto" class="px-10 mr-4") 
+        nav(class="text-white font-bold italic lg:text-lg lg:flex lg:flex-row lg:items-center md:items-center md:flex-row md:flex md:text-lg sm:items-center sm:flex sm:flex-col sm:gap-4 items-center flex flex-col gap-4")
+            a(href="/nuevo-proyecto" class="px-10 lg:mr-4 md:mr-4") 
                 button(class="btn btn-outline btn-accent hover:drop-shadow-[0_1px_60px_rgba(17,154,168,1)]") Nuevo proyecto
             form(action="/auth/cerrar-sesion" method="POST" class="") 
                 input(type="hidden", name="_csrf", value=csrfToken)  
-                input(type="submit" value="Cerrar Sesión" class="btn btn-nuetral hover:drop-shadow-[0_1px_60px_rgba(251,251,251,1)]")    
-    
+                input(type="submit" value="Cerrar Sesión" class="btn sm:w-[138px] w-full btn-nuetral hover:drop-shadow-[0_1px_60px_rgba(251,251,251,1)]")  
+        
