--- a/Proyecto final DAM/Gestion Archivos/public/css/estilos.css
+++ b/Proyecto final DAM/Gestion Archivos/public/css/estilos.css
@@ -1791,6 +1791,11 @@ html {
   transform: rotate(225deg);
   margin-top: 0;
 }
+.mockup-phone .display {
+  overflow: hidden;
+  border-radius: 40px;
+  margin-top: -25px;
+}
 .mockup-browser .mockup-browser-toolbar .input {
   position: relative;
   margin-left: auto;
@@ -2097,8 +2102,9 @@ html {
 .m-4 {
   margin: 1rem;
 }
-.m-6 {
-  margin: 1.5rem;
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 .mx-7 {
   margin-left: 1.75rem;
@@ -2127,10 +2133,6 @@ html {
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
-}
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 .-mt-2 {
   margin-top: -0.5rem;
@@ -2195,17 +2197,8 @@ html {
 .mt-\[200px\] {
   margin-top: 200px;
 }
-.mb-36 {
-  margin-bottom: 9rem;
-}
-.mt-36 {
-  margin-top: 9rem;
-}
 .block {
   display: block;
-}
-.inline-block {
-  display: inline-block;
 }
 .flex {
   display: flex;
@@ -2242,30 +2235,6 @@ html {
 }
 .w-full {
   width: 100%;
-}
-.w-12 {
-  width: 3rem;
-}
-.w-44 {
-  width: 11rem;
-}
-.w-32 {
-  width: 8rem;
-}
-.w-36 {
-  width: 9rem;
-}
-.w-\[140px\] {
-  width: 140px;
-}
-.w-\[138px\] {
-  width: 138px;
-}
-.w-auto {
-  width: auto;
-}
-.w-40 {
-  width: 10rem;
 }
 .max-w-md {
   max-width: 28rem;
@@ -2348,10 +2317,6 @@ html {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -2410,9 +2375,6 @@ html {
 .p-4 {
   padding: 1rem;
 }
-.p-6 {
-  padding: 1.5rem;
-}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -2441,6 +2403,10 @@ html {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.py-44 {
+  padding-top: 11rem;
+  padding-bottom: 11rem;
+}
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
@@ -2448,14 +2414,6 @@ html {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-.py-44 {
-  padding-top: 11rem;
-  padding-bottom: 11rem;
 }
 .text-center {
   text-align: center;
@@ -2483,10 +2441,6 @@ html {
   font-size: 3.75rem;
   line-height: 1;
 }
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -2506,12 +2460,6 @@ html {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-\[130px\] {
-  font-size: 130px;
-}
-.text-\[150px\] {
-  font-size: 150px;
 }
 .font-bold {
   font-weight: 700;
@@ -2603,10 +2551,6 @@ html {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
 }
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
 .hover\:bg-green-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -2647,10 +2591,6 @@ html {
     margin-right: auto;
   }
 
-  .sm\:mr-4 {
-    margin-right: 1rem;
-  }
-
   .sm\:block {
     display: block;
   }
@@ -2659,16 +2599,8 @@ html {
     display: flex;
   }
 
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:w-\[138px\] {
     width: 138px;
-  }
-
-  .sm\:w-\[100px\] {
-    width: 100px;
   }
 
   .sm\:max-w-md {
@@ -2698,11 +2630,6 @@ html {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .sm\:text-2xl {
@@ -2750,14 +2677,9 @@ html {
     align-items: center;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-8xl {
-    font-size: 6rem;
-    line-height: 1;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-6xl {
@@ -2765,19 +2687,14 @@ html {
     line-height: 1;
   }
 
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
   }
 
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 @media (min-width: 1024px) {
@@ -2815,33 +2732,14 @@ html {
     align-items: center;
   }
 
-  .lg\:text-\[130px\] {
-    font-size: 130px;
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
-  .lg\:text-\[150px\] {
-    font-size: 150px;
-  }
-
-  .lg\:text-\[120px\] {
-    font-size: 120px;
-  }
-
-  .lg\:text-\[140px\] {
-    font-size: 140px;
-  }
-
-  .lg\:text-\[100px\] {
-    font-size: 100px;
-  }
-
-  .lg\:text-\[80px\] {
-    font-size: 80px;
-  }
-
-  .lg\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .lg\:text-7xl {
@@ -2854,13 +2752,16 @@ html {
     line-height: 1;
   }
 
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:text-\[140px\] {
+    font-size: 140px;
   }
 
-  .lg\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
+  .lg\:text-\[80px\] {
+    font-size: 80px;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
