--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -8,7 +8,8 @@ block contenido
                 form(action="/mis-proyectos" method="post")
                     input(type="hidden", name="_csrf", value=csrfToken) 
                     div(class="form-control w-full md:w-auto")
-                        input(type="text" name="busqueda"  placeholder="Buscar" class="input input-bordered w-24 md:w-auto")
+                        input(type="text" id="busqueda" name="busqueda" placeholder="Buscar" class="input input-bordered w-24 md:w-auto")
+                    button(type="submit" style="display: none;")
             div(class="flex flex-wrap justify-center gap-4")
                 each proyecto in proyectos
                     div(class="card w-64 bg-base-100 shadow-xl hover:cursor-pointer hover:scale-105 hover:shadow-2xl m-4 transition-all duration-500 ease-in-out")  
@@ -38,7 +39,7 @@ block contenido
                         nav(class="relative z-0 inline-flex rounded-lg shadow-md")
                             - var n = 1;
                                 while n <= paginas
-                                    a(href=`/mis-proyectos?pagina=${n}`, class=`${paginaActual == n ? 'bg-zinc-900 text-white border border- my-2' : 
+                                    a(href=`/mis-proyectos?pagina=${n}&busqueda=${busqueda}`, class=`${paginaActual == n ? 'bg-zinc-900 text-white border border- my-2' : 
                                     'bg-zinc-700 border-indigo-50 text-white'} relative inline-flex items-center px-4 py-2 text-sm
                                     font-medium`) #{n++}
   
