--- a/Proyecto final DAM/Gestion Archivos/public/css/estilos2.css
+++ b/Proyecto final DAM/Gestion Archivos/public/css/estilos2.css
@@ -13,10 +13,11 @@
     border: 4px solid;
     border-color: transparent;
     font-size: 16px;
-    background-color: inherit;
+    background-color: rgba(33, 33, 33, 0.6);
     border-radius: 100px;
-    font-weight: 600;
-    color: #15803d;
+    font-weight: 1000;
+    color: #ffffff;
+    text-transform: uppercase;
     box-shadow: 0 0 0 2px #15803d;
     cursor: pointer;
     overflow: hidden;
@@ -213,5 +214,17 @@
   .button:hover .button_lg::after {
     background-color: #fff;
   }
+
+  /*Diseño mostrar proyecto*/
+  .carta {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    background: rgba(33, 33, 33, 0.6);
+    box-shadow: 15px 15px 30px rgb(25, 25, 25),
+                -15px -15px 30px rgb(60, 60, 60);
+}
+   
+   
   
   
