--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -48,14 +48,16 @@ block contenido
             h1(class="text-white text-5xl font-extrabold italic text-center mt-4 mb-14")= estado
 
         
-        footer(class="flex flex-row justify-center items-center bg-zinc-900 p-3 text-white text-start font-bold italic text-sm mt-4")      
+
+
+        footer(class="flex flex-row justify-center items-center bg-zinc-900 p-3 text-white text-center font-bold italic text-sm mt-4")
             p(xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/")
-                a(property="dct:title" rel="cc:attributionURL" href="https://github.com/Conradotss/DAM2/tree/main/Proyecto%20final%20DAM/Gestion%20Archivos") Gestion Archivos&nbsp;
+                span(property="dct:title") Gestion Archivos&nbsp;
                 | by 
-                a(rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/Conradotss") Roy Denys Calderón Manrique 
+                span(property="cc:attributionName") Roy Calderón &nbsp;
                 | is licensed under 
                 a(href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" class="flex flex-row mb-8")
-                    | Creative Commons Attribution-ShareAlike 4.0 International
+                    | CC BY-SA 4.0
                     img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="")
                     img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="")
                     img(style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt="")
