--- a/Proyecto final DAM/Gestion Archivos/views/inicio/inicio.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/inicio/inicio.pug
@@ -6,7 +6,7 @@ block contenido
             h1(class="bg-clip-text text-transparent lg:text-[140px] md:text-7xl text-6xl bg-gradient-to-r from-green-700 to-white font-extrabold text-center italic") Gestión
                 span(class="lg:text-[80px] md:text-6xl text-3xl font-extrabold text-white") Archivos
 
-        div(class="flex flex-row justify-around mt-[200px]")
+        div(class="flex flex-col gap-32 justify-center items-center mt-[200px]")
             a(href="/auth/login") 
                 button.animated-button
                     svg(viewBox="0 0 24 24", class="arr-2", xmlns="http://www.w3.org/2000/svg")
