Función limitación proyectos creada

--- a/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
@@ -20,6 +20,8 @@ block contenido
                 p(class="text-base font-bold text-white text-start italic my- ml-5")  * Puedes modificar la información de tus proyectos en cualquier momento.
             li 
                 p(class="text-base font-bold text-white text-start italic my-5 ml-5")  * Puedes eliminar proyectos y archivos en cualquier momento.
+            li 
+                p(class="text-base font-bold text-white text-start italic my-5 ml-5")  * Tienes un límite de hasta 10 proyectos de manera gratuíta.
 
         h2(class="text-4xl font-extrabold text-white text-start italic my-7") Seguridad y privacidad
         ul
