--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -3,6 +3,11 @@ extends ../layout/admin
 block contenido 
     div(class="py-10")         
         if proyectos.length
+            if exceso
+                div(role="alert", class="alert alert-warning")
+                    svg(xmlns="http://www.w3.org/2000/svg", class="stroke-current shrink-0 h-6 w-6", fill="none", viewBox="0 0 24 24")
+                        path(stroke-linecap="round", stroke-linejoin="round", stroke-width="2", d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z")
+                    span Has Superado el número máximo de proyectos permitidos
             h1(class="text-white text-5xl font-extrabold italic text-center mt-4 mb-14")= "Mis proyectos"
             div(class="gap-2 flex justify-center items-center mb-6")
                 form(action="/mis-proyectos" method="post")
