--- a/Proyecto final DAM/Gestion Archivos/views/layout/admin.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/layout/admin.pug
@@ -10,7 +10,7 @@ html(lang="es")
     body(class="min-h-screen bg-zinc-900")
         include includes/header-admin
 
-        main(class="mx-auto container px-2")
+        main(class="lg:mx-auto md:mx-auto container lg:px-2 md:px-2")
             block contenido    
 
             block scripts
