--- a/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/template/acerca-de.pug
@@ -32,7 +32,7 @@ block contenido
             li 
                 p(class="text-base my-5 ml-5 font-bold text-white text-start italic")  * Tu información personal no será compartida con terceros.
             li 
-                p(class="text-base my-5 ml-5 font-bold text-white text-start italic")  * Toda tu información sensible estará protegida mediante cifrado.
+                p(class="text-base my-5 ml-5 font-bold text-white text-start italic")  * Toda tu información estará protegida mediante cifrado.
             li 
                 p(class="text-base my-5 ml-5 font-bold text-white text-start italic")  * No subas archivos con información sensible.
 
