--- a/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/dashboard.pug
@@ -9,21 +9,118 @@ block contenido
                         path(stroke-linecap="round", stroke-linejoin="round", stroke-width="2", d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z")
                     span Has Superado el número máximo de proyectos permitidos
             h1(class="text-white text-5xl font-extrabold italic text-center mt-4 mb-14")= "Mis proyectos"
-            div(class="gap-2 flex justify-center items-center mb-6")
-                form(action="/mis-proyectos" method="post")
+            div(class="gap-2  mb-6")
+                form(action="/mis-proyectos" method="post" class="flex flex-col lg:flex-row md:flex-row sm:flex-col justify-around items-center gap-4")
                     input(type="hidden", name="_csrf", value=csrfToken) 
-                    div(class="form-control w-full md:w-auto")
-                        input(type="text" id="busqueda" name="busqueda" placeholder="Buscar" class="input input-bordered w-24 md:w-auto")
-                    button(type="submit" style="display: none;")
+                    div(class="form-control lg:w-1/5 md:w-1/4 sm:w-1/3 w-full")
+                        input(type="text" id="busquedaTitulo" name="busquedaTitulo" placeholder="Buscar por título" class="input input-bordered mr-4 ml-2")
+                    div(class="form-control lg:w-1/5 md:w-1/4 sm:w-1/3 w-full")
+                        input(type="text" id="busquedaTutor" name="busquedaTutor" placeholder="Buscar por Tutor" class="input input-bordered mr-4 ml-2")
+                    select(name="busquedaCiclo" id="busquedaCiclo" class="select select-ghost max-w-xs text-white font-semibold lg:w-1/5 md:w-1/4 sm:w-1/3 w-full")
+                        option(disabled selected) Selecciona un Ciclo Formativo
+                        option(value="0" class="font-bold" disabled ) --FP Básica--
+                        option(value="Agro-jardinería y Composiciones Florales") Agro-jardinería y Composiciones Florales
+                        option(value="Actividades auxiliares de carpintería y mueble") Actividades auxiliares de carpintería y mueble
+                        option(value="Actividades auxiliares de comercio") Actividades auxiliares de comercio
+                        option(value="Operaciones auxiliares de lavandería industrial") Operaciones auxiliares de lavandería industrial
+                        option(value="Operaciones básicas de ofimática") Operaciones básicas de ofimática
+                        option(value="Servicios auxiliares de peluquería") Servicios auxiliares de peluquería
+                        option(value="0" class="font-bold" disabled ) --FP Grado Medio--
+                        option(value="Actividades Comerciales") Actividades Comerciales
+                        option(value="Cocina y Gastronomía") Cocina y Gastronomía
+                        option(value="Cuidados Auxiliares de Enfermería") Cuidados Auxiliares de Enfermería
+                        option(value="Farmacia y Parafarmacia") Farmacia y Parafarmacia
+                        option(value="Gestión Administrativa") Gestión Administrativa
+                        option(value="Instalaciones Eléctricas y Automáticas") Instalaciones Eléctricas y Automáticas
+                        option(value="Peluquería y Cosmética Capilar") Peluquería y Cosmética Capilar
+                        option(value="Sistemas Microinformáticos y Redes") Sistemas Microinformáticos y Redes
+                        option(value="0" class="font-bold" disabled ) --FP Grado Superior--
+                        option(value="Acondicionamiento Físico") Acondicionamiento Físico
+                        option(value="Administración de Sistemas Informáticos en Red") Administración de Sistemas Informáticos en Red
+                        option(value="Administración y Finanzas") Administración y Finanzas
+                        option(value="Automatización y Robótica Industrial") Automatización y Robótica Industrial
+                        option(value="Automoción") Automoción
+                        option(value="Comercio Internacional") Comercio Internacional
+                        option(value="Desarrollo de Aplicaciones Multiplataforma") Desarrollo de Aplicaciones Multiplataforma
+                        option(value="Desarrollo de Aplicaciones Web") Desarrollo de Aplicaciones Web
+                        option(value="Desarrollo de Proyectos de Instalaciones Térmicas y de Fluidos") Desarrollo de Proyectos de Instalaciones Térmicas y de Fluidos
+                        option(value="Diseño en Fabricación Mecánica") Diseño en Fabricación Mecánica
+                        option(value="Educación Infantil") Educación Infantil
+                        option(value="Energías Renovables") Energías Renovables
+                        option(value="Higiene Bucodental") Higiene Bucodental
+                        option(value="Mantenimiento Electrónico") Mantenimiento Electrónico
+                        option(value="Prevención de Riesgos Profesionales") Prevención de Riesgos Profesionales
+                        option(value="Transporte y Logística") Transporte y Logística
+                    button(type="submit" class="btn bg-zinc-500 text-white font-bold") Buscar
             div(class="flex flex-wrap justify-center gap-4")
                 each proyecto in proyectos
                     div(class="card w-64 bg-base-100 shadow-xl hover:cursor-pointer hover:scale-105 hover:shadow-2xl m-4 transition-all duration-500 ease-in-out")  
                         figure 
                             a(href=`/proyecto/${proyecto.id}`) 
-                                img(src="/img/portada.jpg", alt="Proyecto")
+                                if proyecto.ciclo === 'Agro-jardinería y Composiciones Florales'
+                                    img(src="/img/Agro-jardinería y Composiciones Florales.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Actividades auxiliares de carpintería y mueble'
+                                    img(src="/img/Actividades auxiliares de carpintería y mueble.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Actividades auxiliares de comercio'
+                                    img(src="/img/Actividades auxiliares de comercio.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Operaciones auxiliares de lavandería industrial'
+                                    img(src="/img/Operaciones auxiliares de lavandería industrial.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Operaciones básicas de ofimática'
+                                    img(src="/img/Operaciones básicas de ofimática.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Servicios auxiliares de peluquería'
+                                    img(src="/img/Servicios auxiliares de peluquería.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Actividades Comerciales'
+                                    img(src="/img/Actividades Comerciales.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Cocina y Gastronomía'
+                                    img(src="/img/Cocina y Gastronomía.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Cuidados Auxiliares de Enfermería'
+                                    img(src="/img/Cuidados Auxiliares de Enfermería.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Farmacia y Parafarmacia'
+                                    img(src="/img/Farmacia y Parafarmacia.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Gestión Administrativa'
+                                    img(src="/img/Gestión Administrativa.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Instalaciones Eléctricas y Automáticas'
+                                    img(src="/img/Instalaciones Eléctricas y Automáticas.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Peluquería y Cosmética Capilar'
+                                    img(src="/img/Peluquería y Cosmética Capilar.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Sistemas Microinformáticos y Redes'
+                                    img(src="/img/Sistemas Microinformáticos y Redes.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Acondicionamiento Físico'
+                                    img(src="/img/Acondicionamiento Físico.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Administración de Sistemas Informáticos en Red'
+                                    img(src="/img/Administración de Sistemas Informáticos en Red.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Administración y Finanzas'
+                                    img(src="/img/Administración y Finanzas.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Automatización y Robótica Industrial'
+                                    img(src="/img/Automatización y Robótica Industrial.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Automoción'
+                                    img(src="/img/Automoción.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Comercio Internacional'
+                                    img(src="/img/Comercio Internacional.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Desarrollo de Aplicaciones Multiplataforma'
+                                    img(src="/img/Desarrollo de Aplicaciones Multiplataforma.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Desarrollo de Aplicaciones Web'
+                                    img(src="/img/Desarrollo de Aplicaciones Web.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Desarrollo de Proyectos de Instalaciones Térmicas y de Fluidos'
+                                    img(src="/img/Desarrollo de Proyectos de Instalaciones Térmicas y de Fluidos.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Diseño en Fabricación Mecánica'
+                                    img(src="/img/Diseño en Fabricación Mecánica.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Educación Infantil'
+                                    img(src="/img/Educación Infantil.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Energías Renovables'
+                                    img(src="/img/Energías Renovables.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Higiene Bucodental'
+                                    img(src="/img/Higiene Bucodental.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Mantenimiento Electrónico'
+                                    img(src="/img/Mantenimiento Electrónico.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Prevención de Riesgos Profesionales'
+                                    img(src="/img/Prevención de Riesgos Profesionales.png", alt="Proyecto")
+                                else if proyecto.ciclo === 'Transporte y LogísticaIndustrial'
+                                    img(src="/img/Transporte y Logística.png", alt="Proyecto")
+                                
                         div(class="card-body p-4")
                             h2(class="card-title font-bold text-center mb-4")= proyecto.titulo
-                            p(class="font-bold text-lg italic")= "Tecnología: " + proyecto.tecnologia
+                            p(class="font-bold text-lg italic")= "Ciclo: " + proyecto.ciclo
 
                             div(class="flex flex-wrap justify-around mt-4")
                                 div(class="card-actions justify-end")
@@ -44,7 +141,7 @@ block contenido
                         nav(class="relative z-0 inline-flex rounded-lg shadow-md")
                             - var n = 1;
                                 while n <= paginas
-                                    a(href=`/mis-proyectos?pagina=${n}&busqueda=${busqueda}`, class=`${paginaActual == n ? 'bg-zinc-900 text-white border border- my-2' : 
+                                    a(href=`/mis-proyectos?pagina=${n}&busquedaTitulo=${busquedaTitulo}`, class=`${paginaActual == n ? 'bg-zinc-900 text-white border border- my-2' : 
                                     'bg-zinc-700 border-indigo-50 text-white'} relative inline-flex items-center px-4 py-2 text-sm
                                     font-medium`) #{n++}
   
