--- a/Proyecto final DAM/Gestion Archivos/views/gestion/mostrar.pug
+++ b/Proyecto final DAM/Gestion Archivos/views/gestion/mostrar.pug
@@ -7,13 +7,16 @@ block contenido
         div(class="py-10") 
             //-Linea para imprimir datos en la pagina web -->pre=JSON.stringify(proyecto, undefined, 2)
 
-            div(class=" text-white mx-3 carta mr-3")
+            div(class=" text-white mx-3 carta mr-5")
                 div(class="card-body")
                     h2(class="text-center font-bold text-4xl mb-6 underline") Información sobre el proyecto
                     p(class="font-bold text-2xl text-start mb-2") - Descripción: 
                         span #{proyecto.descripcion}
                     p(class="font-bold text-2xl text-start mb-2") - Autor: #{proyecto.autor}
-                    p(class="font-bold text-2xl text-start mb-2") - Tecnología: #{proyecto.tecnologia}
+                    p(class="font-bold text-2xl text-start mb-2") - Tutor: #{proyecto.tutor}
+                    p(class="font-bold text-2xl text-start mb-2") - Tecnología empleada: #{proyecto.tecnologia}
+                    p(class="font-bold text-2xl text-start mb-2") - Tipo de proyecto: #{proyecto.proyecto}
+                    p(class="font-bold text-2xl text-start mb-2") - Ciclo Formativo: #{proyecto.ciclo}
                     p(class="font-bold text-2xl text-start mb-2") - Fecha de creación: #{proyecto.createdAt}
                     p(class="font-bold text-2xl text-start mb-2") - Última modificación: #{proyecto.updatedAt}
                     
